fix line alignments

--- a/style.css
+++ b/style.css
@@ -1098,7 +1098,7 @@ main:nth-child(10){
     width: 2px;
     position: relative;
     top: 10px;
-    left: 50%;
+    left: 49%;
 
     background: white;
 }
